EDS36 Fix (long standing but hitherto finessed) wrapping issue when only one preferred IdP and text size changes.
git-svn-id: https://svn.shibboleth.net/js-embedded-discovery/trunk@107 7a317f17-d332-475d-8e12-9585b3027fa7

--- a/src/resources/idpselect.css
+++ b/src/resources/idpselect.css
@@ -46,6 +46,7 @@ div.IdPSelectPreferredIdPButton a
 div.IdPSelectTextDiv{
     height: 3.5ex; /* Add some height to separate the text from the boxes */
     font-size: 15px;
+    clear: left;
 }
 
 div.IdPSelectPreferredIdPImg
